--- a/react-front/src/components/virtualMachines/vmList.css
+++ b/react-front/src/components/virtualMachines/vmList.css
@@ -18,3 +18,15 @@
     width: flex;
     margin: 20px;
 }
+
+li
+{
+    padding: 5px;
+}
+
+.activate
+{
+    position: relative;
+    bottom: 8px;
+    font-size: 120%
+}
