--- a/react-front/src/components/applications/appliDetail.css
+++ b/react-front/src/components/applications/appliDetail.css
@@ -6,12 +6,22 @@ h3 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 15px;
-    grid-auto-rows: minmax(400px, auto);
+    grid-auto-rows: minmax(auto auto);
 }
 
 .info {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
+}
+
+.inline {
+    display: flex;
+    margin:auto;
+    justify-content: space-around
+}
+
+.inline * {
+    margin:5px;
 }
 
 .chat {
@@ -27,11 +37,11 @@ h3 {
 .doneActions {
     grid-column: 1 / 3;
     grid-row: 3/4;
-    margin: 0 auto;
+    margin: 30px auto;
 }
 
 .inProgressActions {
     grid-column: 3 / 5;
     grid-row: 3/4;
-    margin: 0 auto;
+    margin: 30px auto;
 }
